<resources>
    <string name="app_name">GH</string>
    <string name="field_id">ID: </string>
    <string name="users_title">Github Users</string>
    <string name="e_mail_label">E-mail:</string>
    <string name="company_label">Company:</string>
    <string name="following_label">Following:</string>
    <string name="followers_label">Followers:</string>
    <string name="joined_label">Joined:</string>
    <string name="button_back">Back</string>
    <string name="data_load_error">Failed to load data</string>
</resources>