<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/avatar"
        tools:src="@drawable/ic_launcher_background"
        style="@style/user_avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription" />
    <TextView
        android:id="@+id/name"
        style="@style/user_name"
        tools:text="Name"
        app:layout_constraintTop_toBottomOf="@id/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_info"
        style="@style/user_info_container"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/email_label"
            style="@style/user_label"
            android:text="@string/e_mail_label"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="@id/email"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="user@example.com"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/email_label"
            app:layout_constraintBottom_toTopOf="@id/company"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/company_label"
            style="@style/user_label"
            android:text="@string/company_label"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="@id/company"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/company"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Example Ltd."
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintStart_toEndOf="@id/company_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/following"/>
        <TextView
            android:id="@+id/following_label"
            style="@style/user_label"
            android:text="@string/following_label"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="@id/following"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/following"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="100"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/company"
            app:layout_constraintStart_toEndOf="@id/following_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/followers"/>
        <TextView
            android:id="@+id/followers_label"
            style="@style/user_label"
            android:text="@string/followers_label"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="@id/followers"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/followers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="200"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/following"
            app:layout_constraintStart_toEndOf="@id/followers_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/joined"/>
        <TextView
            android:id="@+id/joined_label"
            style="@style/user_label"
            android:text="@string/joined_label"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="@id/joined"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/joined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="2020/03/10"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/followers"
            app:layout_constraintStart_toEndOf="@id/joined_label"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/back"
        android:text="@string/button_back"
        style="@style/user_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>